imgui-master/imgui.h

struct ImGuiInputTextCallbackData;  
typedef int ImGuiDataType;          
typedef int ImGuiMouseButton;       
typedef int ImGuiFocusedFlags;      
typedef int ImGuiHoveredFlags;      
typedef int ImGuiInputTextFlags;    
typedef int (*ImGuiInputTextCallback)(ImGuiInputTextCallbackData *data);
struct ImVec2
{
    float                                   x, y;
    ImVec2()                                { x = y = 0.0f; }
    ImVec2(float _x, float _y)              { x = _x; y = _y; }
    float  operator[] (size_t idx) const    { IM_ASSERT(idx <= 1); return (&x)[idx]; }    
    float& operator[] (size_t idx)          { IM_ASSERT(idx <= 1); return (&x)[idx]; }    
#ifdef IM_VEC2_CLASS_EXTRA
    IM_VEC2_CLASS_EXTRA     
#endif
};
    extern "C" IMGUI_API void          NewFrame();                                 
    IMGUI_API bool          IsWindowAppearing();
    IMGUI_API bool          IsWindowCollapsed();
    IMGUI_API bool          IsWindowFocused(ImGuiFocusedFlags flags=0); 
    IMGUI_API bool          IsWindowHovered(ImGuiHoveredFlags flags=0); 
    IMGUI_API void          PopFont();
    IMGUI_API void          PopStyleColor(int count = 1);
    IMGUI_API void          PopStyleVar(int count = 1);
    IMGUI_API void          PopItemWidth();
    IMGUI_API void          PopTextWrapPos();
    IMGUI_API void          PushAllowKeyboardFocus(bool allow_keyboard_focus);              
    IMGUI_API void          PopAllowKeyboardFocus();
    IMGUI_API void          PushButtonRepeat(bool repeat);                                  
    IMGUI_API void          PopButtonRepeat();
    IMGUI_API void          NewLine();                                                      
    IMGUI_API void          PopID();                                                        
    IMGUI_API void          LabelText(const char* label, const char* fmt, ...)              IM_FMTARGS(2); 
    IMGUI_API bool          InvisibleButton(const char* str_id, const ImVec2& size);        
    IMGUI_API void          ProgressBar(float fraction, const ImVec2& size_arg = ImVec2(-1,0), const char* overlay = NULL);
    IMGUI_API bool          InputText(const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags = 0, ImGuiInputTextCallback callback = NULL, void* user_data = NULL);
    IMGUI_API bool          InputTextMultiline(const char* label, char* buf, size_t buf_size, const ImVec2& size = ImVec2(0,0), ImGuiInputTextFlags flags = 0, ImGuiInputTextCallback callback = NULL, void* user_data = NULL);
    IMGUI_API bool          InputTextWithHint(const char* label, const char* hint, char* buf, size_t buf_size, ImGuiInputTextFlags flags = 0, ImGuiInputTextCallback callback = NULL, void* user_data = NULL);
    IMGUI_API bool          InputInt(const char* label, int* v, int step = 1, int step_fast = 100, ImGuiInputTextFlags flags = 0);
    IMGUI_API bool          InputInt2(const char* label, int v[2], ImGuiInputTextFlags flags = 0);
    IMGUI_API bool          InputInt3(const char* label, int v[3], ImGuiInputTextFlags flags = 0);
    IMGUI_API bool          InputInt4(const char* label, int v[4], ImGuiInputTextFlags flags = 0);
    IMGUI_API bool          InputScalar(const char* label, ImGuiDataType data_type, void* p_data, const void* p_step = NULL, const void* p_step_fast = NULL, const char* format = NULL, ImGuiInputTextFlags flags = 0);
    IMGUI_API bool          InputScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_step = NULL, const void* p_step_fast = NULL, const char* format = NULL, ImGuiInputTextFlags flags = 0);
    IMGUI_API void          ListBoxFooter();                                                    
    IMGUI_API void          PlotLines(const char* label, const float* values, int values_count, int values_offset = 0, const char* overlay_text = NULL, float scale_min = FLT_MAX, float scale_max = FLT_MAX, ImVec2 graph_size = ImVec2(0, 0), int stride = sizeof(float));
    IMGUI_API void          PlotLines(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset = 0, const char* overlay_text = NULL, float scale_min = FLT_MAX, float scale_max = FLT_MAX, ImVec2 graph_size = ImVec2(0, 0));
    IMGUI_API void          PlotHistogram(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset = 0, const char* overlay_text = NULL, float scale_min = FLT_MAX, float scale_max = FLT_MAX, ImVec2 graph_size = ImVec2(0, 0));
    IMGUI_API void          OpenPopup(const char* str_id);                                      
    IMGUI_API bool          OpenPopupOnItemClick(const char* str_id = NULL, ImGuiMouseButton mouse_button = 1);                     
    IMGUI_API bool          IsPopupOpen(const char* str_id);                                    
    IMGUI_API void          NextColumn();                                                       
    IMGUI_API void          LogToTTY(int auto_open_depth = -1);                                 
    IMGUI_API void          LogToFile(int auto_open_depth = -1, const char* filename = NULL);   
    IMGUI_API void          LogToClipboard(int auto_open_depth = -1);                           
    IMGUI_API void          LogFinish();                                                        
    IMGUI_API void          LogButtons();                                                       
    IMGUI_API void          LogText(const char* fmt, ...) IM_FMTARGS(1);                        
    IMGUI_API void          PopClipRect();
    IMGUI_API bool          IsItemHovered(ImGuiHoveredFlags flags = 0);                         
    IMGUI_API bool          IsItemActive();                                                     
    IMGUI_API bool          IsItemFocused();                                                    
    IMGUI_API bool          IsItemClicked(ImGuiMouseButton mouse_button = 0);                   
    IMGUI_API bool          IsItemVisible();                                                    
    IMGUI_API bool          IsItemEdited();                                                     
    IMGUI_API bool          IsItemActivated();                                                  
    IMGUI_API bool          IsItemDeactivated();                                                
    IMGUI_API bool          IsItemDeactivatedAfterEdit();                                       
    IMGUI_API bool          IsItemToggledOpen();                                                
    IMGUI_API bool          IsAnyItemHovered();                                                 
    IMGUI_API bool          IsAnyItemActive();                                                  
    IMGUI_API bool          IsAnyItemFocused();                                                 
    IMGUI_API bool          IsRectVisible(const ImVec2& size);                                  
    IMGUI_API bool          IsRectVisible(const ImVec2& rect_min, const ImVec2& rect_max);      
    IMGUI_API bool          IsKeyDown(int user_key_index);                                      
    IMGUI_API bool          IsKeyPressed(int user_key_index, bool repeat = true);               
    IMGUI_API bool          IsKeyReleased(int user_key_index);                                  
    IMGUI_API bool          IsMouseDown(ImGuiMouseButton button);                               
    IMGUI_API bool          IsMouseClicked(ImGuiMouseButton button, bool repeat = false);       
    IMGUI_API bool          IsMouseReleased(ImGuiMouseButton button);                           
    IMGUI_API bool          IsMouseDoubleClicked(ImGuiMouseButton button);                      
    IMGUI_API bool          IsMouseHoveringRect(const ImVec2& r_min, const ImVec2& r_max, bool clip = true);
    IMGUI_API bool          IsMousePosValid(const ImVec2* mouse_pos = NULL);                    
    IMGUI_API bool          IsAnyMouseDown();                                                   
    IMGUI_API bool          IsMouseDragging(ImGuiMouseButton button, float lock_threshold = -1.0f);         
    IMGUI_API void          LoadIniSettingsFromDisk(const char* ini_filename);                  
    IMGUI_API void          LoadIniSettingsFromMemory(const char* ini_data, size_t ini_size=0); 
    IMGUI_API void          SetAllocatorFunctions(void* (*alloc_func)(size_t sz, void* user_data), void (*free_func)(void* ptr, void* user_data), void* user_data = NULL);
    IMGUI_API void*         MemAlloc(size_t size);
    IMGUI_API void          MemFree(void* ptr);
struct ImGuiInputTextCallbackData
{
    ImGuiInputTextFlags EventFlag;      
    ImGuiInputTextFlags Flags;          
    void*               UserData;       
    ImWchar             EventChar;      
    ImGuiKey            EventKey;       
    char*               Buf;            
    int                 BufTextLen;     
    int                 BufSize;        
    bool                BufDirty;       
    int                 CursorPos;      
    int                 SelectionStart; 
    int                 SelectionEnd;   
    IMGUI_API ImGuiInputTextCallbackData();
    IMGUI_API void      DeleteChars(int pos, int bytes_count);
    IMGUI_API void      InsertChars(int pos, const char* text, const char* text_end = NULL);
    bool                HasSelection() const { return SelectionStart != SelectionEnd; }
};