ImGui.NET-master/src/ImGui.NET/Generated/ImGuiNative.gen.cs

        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte InputInt(byte* label, int* v, int step, int step_fast, ImGuiInputTextFlags flags);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte InputInt2(byte* label, int* v, ImGuiInputTextFlags flags);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte InputInt3(byte* label, int* v, ImGuiInputTextFlags flags);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte InputInt4(byte* label, int* v, ImGuiInputTextFlags flags);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte InputScalar(byte* label, ImGuiDataType data_type, void* p_data, void* p_step, void* p_step_fast, byte* format, ImGuiInputTextFlags flags);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte InputScalarN(byte* label, ImGuiDataType data_type, void* p_data, int components, void* p_step, void* p_step_fast, byte* format, ImGuiInputTextFlags flags);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte InputText(byte* label, byte* buf, uint buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte InputTextMultiline(byte* label, byte* buf, uint buf_size, Vector2 size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte InputTextWithHint(byte* label, byte* hint, byte* buf, uint buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte InvisibleButton(byte* str_id, Vector2 size);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsAnyItemActive();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsAnyItemFocused();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsAnyItemHovered();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsAnyMouseDown();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsItemActivated();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsItemActive();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsItemClicked(ImGuiMouseButton mouse_button);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsItemDeactivated();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsItemDeactivatedAfterEdit();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsItemEdited();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsItemFocused();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsItemHovered(ImGuiHoveredFlags flags);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsItemToggledOpen();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsItemVisible();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsKeyDown(int user_key_index);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsKeyPressed(int user_key_index, byte repeat);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsKeyReleased(int user_key_index);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsMouseClicked(ImGuiMouseButton button, byte repeat);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsMouseDoubleClicked(ImGuiMouseButton button);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsMouseDown(ImGuiMouseButton button);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsMouseDragging(ImGuiMouseButton button, float lock_threshold);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsMouseHoveringRect(Vector2 r_min, Vector2 r_max, byte clip);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsMousePosValid(Vector2* mouse_pos);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsMouseReleased(ImGuiMouseButton button);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsPopupOpen(byte* str_id);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsRectVisible(Vector2 size);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsRectVisibleVec2(Vector2 rect_min, Vector2 rect_max);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsWindowAppearing();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsWindowCollapsed();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsWindowFocused(ImGuiFocusedFlags flags);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte IsWindowHovered(ImGuiHoveredFlags flags);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void LabelText(byte* label, byte* fmt);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte ListBoxStr_arr(byte* label, int* current_item, byte** items, int items_count, int height_in_items);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ListBoxFooter();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte ListBoxHeaderVec2(byte* label, Vector2 size);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte ListBoxHeaderInt(byte* label, int items_count, int height_in_items);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void LoadIniSettingsFromDisk(byte* ini_filename);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void LoadIniSettingsFromMemory(byte* ini_data, uint ini_size);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void LogButtons();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void LogFinish();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void LogText(byte* fmt);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void LogToClipboard(int auto_open_depth);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void LogToFile(int auto_open_depth, byte* filename);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void LogToTTY(int auto_open_depth);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void* MemAlloc(uint size);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MemFree(void* ptr);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte MenuItemBool(byte* label, byte* shortcut, byte selected, byte enabled);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte MenuItemBoolPtr(byte* label, byte* shortcut, byte* p_selected, byte enabled);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void NewFrame();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void NewLine();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void NextColumn();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void OpenPopup(byte* str_id);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte OpenPopupOnItemClick(byte* str_id, ImGuiMouseButton mouse_button);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PlotHistogramFloatPtr(byte* label, float* values, int values_count, int values_offset, byte* overlay_text, float scale_min, float scale_max, Vector2 graph_size, int stride);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PlotLines(byte* label, float* values, int values_count, int values_offset, byte* overlay_text, float scale_min, float scale_max, Vector2 graph_size, int stride);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PopAllowKeyboardFocus();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PopButtonRepeat();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PopClipRect();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PopFont();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PopID();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PopItemWidth();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PopStyleColor(int count);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PopStyleVar(int count);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PopTextWrapPos();
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ProgressBar(float fraction, Vector2 size_arg, byte* overlay);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PushAllowKeyboardFocus(byte allow_keyboard_focus);
        [DllImport(LIBRARY, CallingConvention = CallingConvention.Cdecl)]
        public static extern void PushButtonRepeat(byte repeat);
